--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@angular/platform-browser-dynamic": "^5.0.3",
     "@angular/platform-server": "^5.0.3",
     "@angular/router": "^5.0.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "highcharts": "^5.0.14",
     "highcharts-more": "^0.1.2",
+    "intl": "^1.2.5",
     "rxjs": "^5.5.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
