--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-flex-material-template",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -13,14 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.3",
-    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/cdk": "^5.0.0-rc0",
     "@angular/common": "^5.0.3",
     "@angular/compiler": "^5.0.3",
     "@angular/core": "^5.0.3",
     "@angular/flex-layout": "2.0.0-beta.10-4905443",
     "@angular/forms": "^5.0.3",
     "@angular/http": "^5.0.3",
-    "@angular/material": "^2.0.0-beta.12",
+    "@angular/material": "^5.0.0-rc0",
     "@angular/platform-browser": "^5.0.3",
     "@angular/platform-browser-dynamic": "^5.0.3",
     "@angular/platform-server": "^5.0.3",
@@ -56,6 +56,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "^2.6.2"
+    "typescript": ">=2.4.2 <2.5.0"
   }
 }
